--- a/h1ds/h1ds/conf/nginx/h1ds_production.conf.template
+++ b/h1ds/h1ds/conf/nginx/h1ds_production.conf.template
@@ -5,44 +5,47 @@ server {
     error_log /var/log/nginx/h1ds.error.log;
     rewrite ^/mdsplus/(.*)$ http://h1ds.anu.edu.au/data/$1 permanent;
 
-    # IPs to block
-    include __venv_dir__/h1ds/conf/block.conf;
+    #pagespeed on;
+    #pagespeed FileCachePath /var/ngx_pagespeed_cache;
 
     # enable compression
     gzip on;
-    #gzip_types text/plain application/xml application/json application/x-javascript application/javascript;
+    #gzip_types text/plain application/xml application/json;
     # compress all the things.
     gzip_types *;
 
-    pagespeed on;
-    pagespeed FileCachePath /var/ngx_pagespeed_cache;
 
-    location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" { add_header "" ""; }
-    location ~ "^/ngx_pagespeed_static/" { }
-    location ~ "^/ngx_pagespeed_beacon$" { }
-    location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
-    location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
+    #location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" { add_header "" ""; }
+    #location ~ "^/ngx_pagespeed_static/" { }
+    #location ~ "^/ngx_pagespeed_beacon$" { }
+    #location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
+    #location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
+
+    if (-f __venv_dir__/h1ds/h1ds/static/maintenance.html) {
+        return 503;
+    }
+
 
 
     # https://docs.djangoproject.com/en/dev/howto/static-files/#serving-static-files-in-production
     location /static/ { # STATIC_URL
-        alias __venv_dir__/static/; # STATIC_ROOT
+        alias __venv_dir__/h1ds/h1ds/static/; # STATIC_ROOT
         expires 30d;
     }
 
     location /media/ { # MEDIA_URL
-        alias __venv_dir__/media/; # MEDIA_ROOT
+        alias __venv_dir__/h1ds/h1ds/media/; # MEDIA_ROOT
         expires 30d;
     }
 
     location /admin-media/ {
-        alias __venv_dir__/media/admin/;
+        alias __venv_dir__/h1ds/h1ds/media/admin/;
         expires 30d;
     }
 
     location /wiki {
         proxy_pass http://unix:/tmp/moin.gunicorn.sock:;
-	proxy_set_header SCRIPT_NAME /wiki;
+	proxy_set_header SCRIPT_NAME /wiki;,
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,4 +68,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    error_page 503 @maintenance;
+    location @maintenance {
+        root __venv_dir__/h1ds/h1ds/static;
+        rewrite ^(.*)$ /maintenance.html break;
+    }
+
 }
