--- a/h1ds/h1ds/conf/nginx/h1ds_production.conf.template
+++ b/h1ds/h1ds/conf/nginx/h1ds_production.conf.template
@@ -45,7 +45,7 @@ server {
 
     location /wiki {
         proxy_pass http://unix:/tmp/moin.gunicorn.sock:;
-	proxy_set_header SCRIPT_NAME /wiki;,
+	proxy_set_header SCRIPT_NAME /wiki;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
