--- a/h1ds/deployment/tasks/tasks.sh.template
+++ b/h1ds/deployment/tasks/tasks.sh.template
@@ -4,4 +4,4 @@ export DJANGO_SETTINGS_MODULE=h1ds.settings.$environment
 cd $virtualenv_dir
 source bin/activate
 export PYTHONPATH=${django_project_dir}:$$PYTHONPATH
-exec bin/django-admin.py celeryd -v 2 -B --loglevel=INFO -f $$LOGFILE
+exec bin/django-admin.py celeryd -v 2 -B --loglevel=ERROR -f $$LOGFILE
